first draft of html and css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,125 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Courtney's Professional Profile</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <title>Courtney's Professional Profile</title>
+    </head>
+    <body>
+    <!-- Header/Navigation Start-->
+    <header>
+        <h1>
+          <a href="#home">Courtney's Professional Profile</a>
+        </h1>
+        <nav>
+          <ul>
+            <li>
+              <a href="#about-me">About Me</a>
+            </li>
+            <li>
+              <a href="#my-work">My Work</a>
+            </li>
+            <li>
+              <a href="#contact-me">Contact Me</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    <!--Header/Navigation End-->
+    <!--Hero Start-->
+    <section id="home" class="hero">
+        <!-- Name -->
+        <div class = "hero-name">
+            <h2>Courtney Van Breda</h2>
+            <p>Full Stack Web Developer</p>
+        </div>
+        <!-- Recent Photo or Avatar -->
+        <div class="hero-child">
+            <img src="<!--ADD PICTURE-->" alt="Courtney looking professional"/>
+        </div>
+    </section>
+    <!-- Hero End-->
+    <!--"About Me" Section Start-->
+    <section id="about-me" class="section">
+        <h2>About Me</h2>
+        <div>
+            <article class="about-me">
+                <h3>Interests</h3>
+                <ul>
+                    <li>
+                     Crafting
+                    </li>
+                    <li>
+                    Music
+                    </li>
+                    <li>
+                    Gardening
+                    </li>
+                    <li>
+                    Camping
+                    </li>
+                </ul>
+            </article>
+            <article class="about-me">
+                <h3>Professional Highlights</h3>
+                <ul>
+                    <li>
+                    Knows multiple web development coding languages
+                    </li>
+                    <li>
+                    Fluent in Microsoft and G Suite programs
+                    </li>
+                    <li>
+                    Quick Learner
+                    </li>
+                    <li>
+                    Critical Thinker
+                    </li>
+                </ul>
+            </article>
+            <article class="about-me">
+                <h3>Education</h3>
+                <ul>
+                    <li>
+                    Western University - Bachelor of Arts, Hon. Spec. Religious Studies - 2013
+                    </li>
+                    <li>
+                    Westervelt - Diploma, Paralegal Studies - 2015
+                    </li>
+                    <li>
+                    University of Toronto - Certificate, Full Stack Web Development Bootcamp - 2022
+                    </li>
+                </ul>
+            </article>
+        </div>
+    </section>
+    <!--"About Me" Section End-->
+    <!--"My Work" Section Start-->
+    <section id="my-work" class="section-title">
+        <h2>My Work</h2>
+        <!--HTML/CSS-->
+        <!--MERN Stack-->
+        <!--JavaScript/CSS-->
+        <!--React-->
+    </section>
+    <!--"My Work" Section End-->
+    <!--"Contact Me" Section Start-->
+    <section id="contact-me" class="section-title">
+        <h2>Contact Me</h2>
+        <!--Phone-->
+        <p>226-236-4357</p>
+        <!--Email-->
+        <p><a href="mailto:cmvanbreda91@gmail.com">cmvanbreda91@gmail.com</a></p>
+        <!--LinkedIn-->
+        <p><a  target="_blank" href="https://ca.linkedin.com/in/courtney-van-breda-8a2557138">LinkedIn</a></p>
+        <!--GitHub-->
+        <p><a  target="_blank" href="https://github.com/cvanbreda91">GitHub</a></p>     
+    </section>
+    <!--"Contact Me" Section End-->
+    <!--Footer Start-->
+    <footer>
+        <!--Final Thoughts-->
+    </footer>
+    <!--Footer End-->
+    </body>
+</html>
