--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <!--Hero Start-->
     <section id="home" class="hero">
         <!-- Name -->
-        <div class = "hero-name">
+        <div>
             <h2>Courtney Van Breda</h2>
             <p>Full Stack Web Developer</p>
         </div>
         <!-- Recent Photo or Avatar -->
-        <div class="hero-child">
-            <img src="<!--ADD PICTURE-->" alt="Courtney looking professional"/>
+        <div>
+            <img src="assets/images/Professional Courtney.jpg" alt="Courtney looking professional"/>
         </div>
     </section>
     <!-- Hero End-->
@@ -43,51 +43,66 @@
     <section id="about-me" class="section">
         <h2>About Me</h2>
         <div>
-            <article class="about-me">
+            <article>
                 <h3>Interests</h3>
+                <br>
+                <br>
                 <ul>
                     <li>
                      Crafting
                     </li>
+                    <br>
                     <li>
                     Music
                     </li>
+                    <br>
                     <li>
                     Gardening
                     </li>
+                    <br>
                     <li>
                     Camping
                     </li>
                 </ul>
             </article>
-            <article class="about-me">
-                <h3>Professional Highlights</h3>
+            <article>
+                <h3>Professional 
+                    <br>
+                    Highlights</h3>
+                <br>
                 <ul>
                     <li>
                     Knows multiple web development coding languages
                     </li>
+                    <br>
                     <li>
                     Fluent in Microsoft and G Suite programs
                     </li>
+                    <br>
                     <li>
                     Quick Learner
                     </li>
+                    <br>
                     <li>
                     Critical Thinker
                     </li>
                 </ul>
             </article>
-            <article class="about-me">
+            <article>
                 <h3>Education</h3>
+                <br>
+                <br>
                 <ul>
                     <li>
-                    Western University - Bachelor of Arts, Hon. Spec. Religious Studies - 2013
+                    Western University - 2013
                     </li>
+                    <br>
                     <li>
-                    Westervelt - Diploma, Paralegal Studies - 2015
+                    Westervelt- 2015
                     </li>
+                    <br>
                     <li>
-                    University of Toronto - Certificate, Full Stack Web Development Bootcamp - 2022
+                    University of Toronto - 2022
                     </li>
                 </ul>
             </article>
@@ -95,16 +110,50 @@
     </section>
     <!--"About Me" Section End-->
     <!--"My Work" Section Start-->
-    <section id="my-work" class="section-title">
+    <section id="my-work" class="section">
         <h2>My Work</h2>
+        <div>
         <!--HTML/CSS-->
+            <article>
+                <h4>Run Buddy</h4>
+                <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
+                <img src="assets/images/Run-Buddy.png" alt="Run Buddy Website" width="500px"/></a>
+                    <div class="websites">
+                        <p>HTML/CSS</p>
+                    </div>
+            </article>
         <!--MERN Stack-->
+            <article>
+                <h4>MERN-Stack Placeholder</h4>
+                <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
+                <img src="assets/images/Run-Buddy.png" alt="Placeholder for MERN-Stack" width="500px"/></a>
+                    <div class="websites">
+                        <p>MERN Stack</p>
+                    </div>
+            </article>
         <!--JavaScript/CSS-->
+            <article>
+                <h4>Javascript Placeholder</h4>
+                <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
+                <img src="assets/images/Run-Buddy.png" alt="Placeholder for MERN-Stack" width="500px"/></a>
+                    <div class="websites">
+                        <p>Javascript/CSS</p>
+                    </div>
+            </article>
         <!--React-->
+            <article>
+                <h4>React Placeholder</h4>
+                <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
+                <img src="assets/images/Run-Buddy.png" alt="Placeholder for React" width="500px"/></a>
+                    <div class="websites">
+                        <p>React</p>
+                    </div>
+            </article>
+        </div>
     </section>
     <!--"My Work" Section End-->
     <!--"Contact Me" Section Start-->
-    <section id="contact-me" class="section-title">
+    <section id="contact-me" class="section">
         <h2>Contact Me</h2>
         <!--Phone-->
         <p>226-236-4357</p>
