additional styling and functionality

--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
     </section>
     <!--"About Me" Section End-->
     <!--"My Work" Section Start-->
-    <section id="my-work" class="section">
+    <section id="my-work" class="websites">
         <h2>My Work</h2>
         <div>
         <!--HTML/CSS-->
             <article>
                 <h4>Run Buddy</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/Run-Buddy.png" alt="Run Buddy Website" width="500px"/></a>
-                    <div class="websites">
+                <img src="assets/images/Run-Buddy.png" alt="Run Buddy Website" width="500px" height="400px"/></a>
+                    <div>
                         <p>HTML/CSS</p>
                     </div>
             </article>
@@ -126,17 +126,18 @@
             <article>
                 <h4>MERN-Stack Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/Run-Buddy.png" alt="Placeholder for MERN-Stack" width="500px"/></a>
-                    <div class="websites">
+                <img src="assets/images/blue stars.jpg" alt="Placeholder for MERN-Stack" width="500px" height="400px"/></a>
+                    <div>
                         <p>MERN Stack</p>
                     </div>
             </article>
+            <br>
         <!--JavaScript/CSS-->
             <article>
                 <h4>Javascript Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/Run-Buddy.png" alt="Placeholder for MERN-Stack" width="500px"/></a>
-                    <div class="websites">
+                <img src="assets/images/blue wallpaper.jpg" alt="Placeholder for MERN-Stack" width="500px" height="400px"/></a>
+                    <div>
                         <p>Javascript/CSS</p>
                     </div>
             </article>
@@ -144,8 +145,8 @@
             <article>
                 <h4>React Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/Run-Buddy.png" alt="Placeholder for React" width="500px"/></a>
-                    <div class="websites">
+                <img src="assets/images/blues music.jpg" alt="Placeholder for React" width="500px" height="400px"/></a>
+                    <div>
                         <p>React</p>
                     </div>
             </article>
@@ -153,7 +154,7 @@
     </section>
     <!--"My Work" Section End-->
     <!--"Contact Me" Section Start-->
-    <section id="contact-me" class="section">
+    <section id="contact-me" class="contact">
         <h2>Contact Me</h2>
         <!--Phone-->
         <p>226-236-4357</p>
