Finalize styings and add media quiries

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Courtney's Professional Profile</title>
     </head>
     <body>
@@ -40,13 +41,11 @@
     </section>
     <!-- Hero End-->
     <!--"About Me" Section Start-->
-    <section id="about-me" class="section">
+    <section id="about-me" class="me">
         <h2>About Me</h2>
         <div>
             <article>
-                <h3>Interests</h3>
-                <br>
-                <br>
+                <h3 class="interests">Interests</h3>
                 <ul>
                     <li>
                      Crafting
@@ -69,7 +68,6 @@
                 <h3>Professional 
                     <br>
                     Highlights</h3>
-                <br>
                 <ul>
                     <li>
                     Knows multiple web development coding languages
@@ -89,16 +87,14 @@
                 </ul>
             </article>
             <article>
-                <h3>Education</h3>
-                <br>
-                <br>
+                <h3 class="interests">Education</h3>
                 <ul>
                     <li>
                     Western University - 2013
                     </li>
                     <br>
                     <li>
-                    Westervelt- 2015
+                    Westervelt - 2015
                     </li>
                     <br>
                     <li>
@@ -117,7 +113,7 @@
             <article>
                 <h4>Run Buddy</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/Run-Buddy.png" alt="Run Buddy Website" width="500px" height="400px"/></a>
+                <img src="assets/images/Run-Buddy.png" alt="Run Buddy Website" /></a>
                     <div>
                         <p>HTML/CSS</p>
                     </div>
@@ -126,7 +122,7 @@
             <article>
                 <h4>MERN-Stack Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/blue stars.jpg" alt="Placeholder for MERN-Stack" width="500px" height="400px"/></a>
+                <img src="assets/images/blue stars.jpg" alt="Placeholder for MERN-Stack" /></a>
                     <div>
                         <p>MERN Stack</p>
                     </div>
@@ -136,7 +132,7 @@
             <article>
                 <h4>Javascript Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/blue wallpaper.jpg" alt="Placeholder for MERN-Stack" width="500px" height="400px"/></a>
+                <img src="assets/images/blue wallpaper.jpg" alt="Placeholder for MERN-Stack" /></a>
                     <div>
                         <p>Javascript/CSS</p>
                     </div>
@@ -145,7 +141,7 @@
             <article>
                 <h4>React Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/blues music.jpg" alt="Placeholder for React" width="500px" height="400px"/></a>
+                <img src="assets/images/blues music.jpg" alt="Placeholder for React"/></a>
                     <div>
                         <p>React</p>
                     </div>
@@ -156,20 +152,27 @@
     <!--"Contact Me" Section Start-->
     <section id="contact-me" class="contact">
         <h2>Contact Me</h2>
-        <!--Phone-->
-        <p>226-236-4357</p>
-        <!--Email-->
-        <p><a href="mailto:cmvanbreda91@gmail.com">cmvanbreda91@gmail.com</a></p>
-        <!--LinkedIn-->
-        <p><a  target="_blank" href="https://ca.linkedin.com/in/courtney-van-breda-8a2557138">LinkedIn</a></p>
-        <!--GitHub-->
-        <p><a  target="_blank" href="https://github.com/cvanbreda91">GitHub</a></p>     
+        <div>
+            <!--Phone-->
+            <p>&#128242 226-236-4357</p>
+            <!--Email-->
+            <a href="mailto:cmvanbreda91@gmail.com">&#128235 cmvanbreda91@gmail.com</a>
+            <!--LinkedIn-->
+            <a target="_blank"href="https://ca.linkedin.com/in/courtney-van-breda-8a2557138">&#127919 LinkedIn</a>
+            <!--GitHub-->
+            <a  target="_blank" href="https://github.com/cvanbreda91">&#128296 GitHub</a>
+        </div>
     </section>
     <!--"Contact Me" Section End-->
     <!--Footer Start-->
     <footer>
-        <!--Final Thoughts-->
-    </footer>
+        <h2>A Courtney Production</h2>
+        <div>
+          <p>All rights reserved</p>
+          <p>Thanks for stopping by!</p>
+          <p> &copy; 1991 Courtney, Inc.</p>
+        </div>
+      </footer>
     <!--Footer End-->
     </body>
 </html>
