fix sizing issue

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>My Work</h2>
         <div>
         <!--HTML/CSS-->
-            <article>
+            <article id="run" class="pretty-border">
                 <h4>Run Buddy</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
                 <img src="assets/images/Run-Buddy.png" alt="Run Buddy Website" /></a>
@@ -119,31 +119,31 @@
                     </div>
             </article>
         <!--MERN Stack-->
-            <article>
+            <article class="pretty-border">
                 <h4>MERN-Stack Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
                 <img src="assets/images/blue stars.jpg" alt="Placeholder for MERN-Stack" /></a>
                     <div>
-                        <p>MERN Stack</p>
+                        <p>MERN Stack placeholder</p>
                     </div>
             </article>
             <br>
         <!--JavaScript/CSS-->
-            <article>
+            <article class="pretty-border">
                 <h4>Javascript Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
                 <img src="assets/images/blue wallpaper.jpg" alt="Placeholder for MERN-Stack" /></a>
                     <div>
-                        <p>Javascript/CSS</p>
+                        <p>Javascript/CSS placeholder</p>
                     </div>
             </article>
         <!--React-->
-            <article>
+            <article class="pretty-border">
                 <h4>React Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/blues music.jpg" alt="Placeholder for React"/></a>
+                <img src="assets/images/blues music.jpg" alt="Placeholder for React" /></a>
                     <div>
-                        <p>React</p>
+                        <p>React placeholder</p>
                     </div>
             </article>
         </div>
