--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <!-- Recent Photo or Avatar -->
         <div>
-            <img src="assets/images/Professional Courtney.jpg" alt="Courtney looking professional"/>
+            <img src="./assets/images/Professional Courtney.jpg" alt="Courtney looking professional"/>
         </div>
     </section>
     <!-- Hero End-->
@@ -113,7 +113,7 @@
             <article id="run" class="pretty-border">
                 <h4>Run Buddy</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/Run-Buddy.png" alt="Run Buddy Website" /></a>
+                <img src="./assets/images/Run-Buddy.png" alt="Run Buddy Website" /></a>
                     <div>
                         <p>HTML/CSS</p>
                     </div>
@@ -122,7 +122,7 @@
             <article class="pretty-border">
                 <h4>MERN-Stack Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/blue stars.jpg" alt="Placeholder for MERN-Stack" /></a>
+                <img src="./assets/images/blue stars.jpg" alt="Placeholder for MERN-Stack" /></a>
                     <div>
                         <p>MERN Stack placeholder</p>
                     </div>
@@ -132,7 +132,7 @@
             <article class="pretty-border">
                 <h4>Javascript Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/blue wallpaper.jpg" alt="Placeholder for MERN-Stack" /></a>
+                <img src="./assets/images/blue wallpaper.jpg" alt="Placeholder for MERN-Stack" /></a>
                     <div>
                         <p>Javascript/CSS placeholder</p>
                     </div>
@@ -141,7 +141,7 @@
             <article class="pretty-border">
                 <h4>React Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="assets/images/blues music.jpg" alt="Placeholder for React" /></a>
+                <img src="./assets/images/blues music.jpg" alt="Placeholder for React" /></a>
                     <div>
                         <p>React placeholder</p>
                     </div>
