update with group project

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                         <p>HTML/CSS</p>
                     </div>
             </article>
-        <!--MERN Stack-->
+        <!--Full Frontend development group project-->
             <article class="pretty-border">
-                <h4>MERN-Stack Placeholder</h4>
-                <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="./assets/images/blue stars.jpg" alt="Placeholder for MERN-Stack" /></a>
+                <h4>Full Frontend Development</h4>
+                <a target="_blank" href="https://cvanbreda91.github.io/bark-woof/">
+                <img src="./assets/images/Bark-Woof.png" alt="Bark-woof website" /></a>
                     <div>
                         <p>MERN Stack placeholder</p>
                     </div>
