update with project 2

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!--JavaScript/CSS-->
             <article class="pretty-border">
                 <h4>Javascript Placeholder</h4>
-                <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
+                <a target="_blank" href="https://vast-beach-17756.herokuapp.com/">
                 <img src="./assets/images/blue wallpaper.jpg" alt="Placeholder for MERN-Stack" /></a>
                     <div>
                         <p>Javascript/CSS placeholder</p>
@@ -141,7 +141,7 @@
             <article class="pretty-border">
                 <h4>React Placeholder</h4>
                 <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
-                <img src="./assets/images/blues music.jpg" alt="Placeholder for React" /></a>
+                <img src="./assets/images/lifetracker.png" alt="lifetracker" /></a>
                     <div>
                         <p>React placeholder</p>
                     </div>
