--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!--React-->
             <article class="pretty-border">
                 <h4>React Placeholder</h4>
-                <a target="_blank" href="https://cvanbreda91.github.io/Run-Buddy/">
+                <a target="_blank" href="ttps://vast-beach-17756.herokuapp.com/">
                 <img src="./assets/images/lifetracker.png" alt="lifetracker" /></a>
                     <div>
                         <p>React placeholder</p>
